src/tests/errors/32_generic_class_struct_exclusive/source.z42
namespace Demo;

void F<T>(T x) where T: class + struct { }

void Main() { }
